--- a/FED/CA2/css/style.css
+++ b/FED/CA2/css/style.css
@@ -119,6 +119,10 @@ body::-webkit-scrollbar {
 .sec .img-rounded {
     border-radius: 5%;
 }
+.sec .text-area {
+    background: rgba(248, 248, 248, 0.2);
+    border-radius: 25px;
+}
 @media screen and (max-width: 768px) {
     .sec .profile {
         display: flex;
@@ -129,5 +133,9 @@ body::-webkit-scrollbar {
         width: 300px;
         height: 300px;
         object-fit: cover;
+    }
+    .sec .text-area {
+        background: none;
+        border-radius: 0;
     }
 }
