--- a/FED/CA2/css/style.css
+++ b/FED/CA2/css/style.css
@@ -103,6 +103,7 @@ body::-webkit-scrollbar {
     height: 100%;
     background: url('../images/background.JPG') center no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     filter: blur(2px); /* Adjust the blur amount as needed */
     z-index: -1;
 }
@@ -113,17 +114,29 @@ body::-webkit-scrollbar {
     background-size: cover;
 } */
 .sec {
-    height: 100vh;
+    height: 90vh;
     margin: 0;  
 }
 .sec .img-rounded {
     border-radius: 5%;
 }
 .sec .text-area {
-    background: rgba(248, 248, 248, 0.2);
+    background: rgba(248, 248, 248, 0.5);
     border-radius: 25px;
 }
+.sec1 {
+    height: 100vh;
+    margin: 0;
+    background-color: #393E46;
+    overflow: scroll;
+}
+.sec1::-webkit-scrollbar {
+    display: none;
+}
 @media screen and (max-width: 768px) {
+    .sec {
+        height: 100vh;
+    }
     .sec .profile {
         display: flex;
         justify-content: center;
@@ -138,4 +151,19 @@ body::-webkit-scrollbar {
         background: none;
         border-radius: 0;
     }
+}
+.sec1 div.row.px-5.py-5 div {
+    overflow: hidden;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 3% 3% 0 3%;
+    width: 300px;
+}
+.sec1 div.row.px-5.py-5 div img {
+    width: 200%;
+    transition: transform 0.3s ease;
+}
+.sec1 div.row.px-5.py-5 div img:hover {
+    transform: scale(1.2);
+    filter: blur(2px);
 }
