--- a/FED/CA2/css/style.css
+++ b/FED/CA2/css/style.css
@@ -92,6 +92,8 @@ body::-webkit-scrollbar {
 /* About Me Style */
 .bg {
     position: relative;
+    margin: 0;
+    padding: 0;
 }
 
 .bg::before {
@@ -107,15 +109,11 @@ body::-webkit-scrollbar {
     filter: blur(2px); /* Adjust the blur amount as needed */
     z-index: -1;
 }
-/* .bg {
-    background: url('../images/background.JPG');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
 .sec {
-    height: 90vh;
-    margin: 0;  
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
 }
 .sec .img-rounded {
     border-radius: 5%;
@@ -124,19 +122,10 @@ body::-webkit-scrollbar {
     background: rgba(248, 248, 248, 0.5);
     border-radius: 25px;
 }
-.sec1 {
-    height: 100vh;
-    margin: 0;
-    background-color: #393E46;
-    overflow: scroll;
-}
-.sec1::-webkit-scrollbar {
-    display: none;
-}
 @media screen and (max-width: 768px) {
-    .sec {
+    /* .sec {
         height: 100vh;
-    }
+    } */
     .sec .profile {
         display: flex;
         justify-content: center;
@@ -152,18 +141,6 @@ body::-webkit-scrollbar {
         border-radius: 0;
     }
 }
-.sec1 div.row.px-5.py-5 div {
-    overflow: hidden;
-    display: flex;
-    justify-content: space-evenly;
-    margin: 3% 3% 0 3%;
-    width: 300px;
-}
-.sec1 div.row.px-5.py-5 div img {
-    width: 200%;
-    transition: transform 0.3s ease;
-}
-.sec1 div.row.px-5.py-5 div img:hover {
-    transform: scale(1.2);
-    filter: blur(2px);
+section.footer {
+    background-color: #fff;
 }
